objects/agf__ADM_Scrum_Team__c.object
<CustomObject>
    <fields>
        <fullName>agf__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Board_Preference__c</fullName>
        <description>This field defines if team follows Sprints or Kanban</description>
        <inlineHelpText>Use this field to indicate if your team uses Sprint or Kanban. For Scrumban users, this field is used to indicate which board (Sprint or Kanban) is currently active and in use. For ex: Setting this field to Sprint will activate your work status mappings for the Sprint Board so that when a work card is moved across columns, the Status of that work is also changed accordingly. It will not update your Kanban Board if you choose Sprint and vice versa.</inlineHelpText>
        <label>Board Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint</fullName>
                    <default>true</default>
                    <label>Sprint</label>
                </value>
                <value>
                    <fullName>Kanban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Capex_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This team can mark User Stories and Tasks as Capital Expenditures</description>
        <inlineHelpText>This team can mark User Stories and Tasks as Capital Expenditures</inlineHelpText>
        <label>Capitalizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Capex_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capitalization Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capex_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Chatter_Groups__c</fullName>
        <inlineHelpText>Enter a list of Chatter Group IDs separated by commas (ie: 0F9B000000000qR, 0F9B000000000q2). The ID can be found in a Group&apos;s URL.

Valid IDs will be rendered into links to Chatter Groups.</inlineHelpText>
        <label>Chatter Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Cloud_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud</label>
        <referenceTo>agf__ADM_Cloud__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Cloud__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Core Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Data Center Automation</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Network and Systems Platform</fullName>
                </value>
                <value>
                    <fullName>Path-To-Production</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Production Support</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Programmatic UI</fullName>
                </value>
                <value>
                    <fullName>R&amp;D App Delivery</fullName>
                </value>
                <value>
                    <fullName>Reliability</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Colocation__c</fullName>
        <label>Colocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Copy_Record_Type_Name__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Copy Record Type Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Done_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Definition of Done Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Done__c</fullName>
        <label>Definition of Done</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Ready_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Definition of Ready Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Ready__c</fullName>
        <label>Definition of Ready</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Distribution_Lists__c</fullName>
        <label>Distribution Lists</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Division__c</fullName>
        <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Products</fullName>
                </value>
                <value>
                    <fullName>Tech Ops</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Cloud__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Products</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Appstore</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Common Services</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Identity / Security</fullName>
                </value>
                <value>
                    <fullName>InfoSec</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Programmable Data Center</fullName>
                </value>
                <value>
                    <fullName>Reliability</fullName>
                </value>
                <value>
                    <fullName>Sales Department</fullName>
                </value>
                <value>
                    <fullName>Service Department</fullName>
                </value>
                <value>
                    <fullName>T&amp;P Ops</fullName>
                </value>
                <value>
                    <fullName>Test Health</fullName>
                </value>
                <value>
                    <fullName>Tools</fullName>
                </value>
                <value>
                    <fullName>Trust &amp; Productivity</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Exclude_Capacity_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value used to exclude team from IT Reports</description>
        <label>Exclude from IT Capacity Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__External_Name__c</fullName>
        <externalId>true</externalId>
        <label>External Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Group_ID_Link__c</fullName>
        <formula>IF( ISBLANK(agf__Team_Email_Group_ID__c) , &apos;&apos;, HYPERLINK(&apos;/setup/own/groupdetail.jsp?id=&apos;+agf__Team_Email_Group_ID__c+&apos;&amp;setupid=PublicGroups&apos;, agf__Team_Email_Group_ID__c))</formula>
        <label>Group ID Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Include_Lightning_Platform_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if Lightning Platform Freeze records should be included for releases. This is in addition to Feature Freeze and Release Freeze records.</description>
        <inlineHelpText>Check this box if Lightning Platform Freeze records should be included for releases. This is in addition to Feature Freeze and Release Freeze records.</inlineHelpText>
        <label>Include Lightning Platform Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Kanban__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kanban</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Lock_Report__c</fullName>
        <formula>HYPERLINK(&apos;https://build2.soma.salesforce.com/luna2/gatekeeperreport.faces?teamid=&apos; +  Id , &apos;Gatekeeper&apos; )</formula>
        <label>Lock Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_new_org62_Cases__c</fullName>
        <description>Number of new org62 customer cases added</description>
        <label>Number of new org62 Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__PO_Certified__c</fullName>
        <description>Is Product Owner certified?</description>
        <formula>agf__Product_Owner__r.agf__Certified_Product_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Product Owner certified?</inlineHelpText>
        <label>PO Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__PO_more_than_one_team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO more than one team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Cloud__c</fullName>
        <formula>agf__Cloud_LU__r.agf__Parent_Cloud__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Cloud</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Prefer_Board_Column_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If team checks this - Work status update will update Board column on the Sprint Virtual wall and Kanban Columns will not be updated automatically.</description>
        <inlineHelpText>If team checks this - Work status update will update Board column on the Sprint Virtual wall and Kanban Columns will not be updated automatically.</inlineHelpText>
        <label>Prefer Board Column Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core - Architecture</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>CSS - Knowledge Base</fullName>
                </value>
                <value>
                    <fullName>Ideas</fullName>
                </value>
                <value>
                    <fullName>Partner Networks</fullName>
                </value>
                <value>
                    <fullName>Platform - Administration &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Platform - Analytics</fullName>
                </value>
                <value>
                    <fullName>Platform - AppExchange</fullName>
                </value>
                <value>
                    <fullName>Platform - Application Development</fullName>
                </value>
                <value>
                    <fullName>Platform - Application Services</fullName>
                </value>
                <value>
                    <fullName>Platform - Appstore</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Platform - Other</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>AppStore Edition</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>Email Clients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Line__c</fullName>
        <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
        <label>Product Line TO BE DELETED</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ADN</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>App Lifecycle, ISV, Admin</fullName>
                </value>
                <value>
                    <fullName>Appstore</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Enterprise Scale</fullName>
                </value>
                <value>
                    <fullName>Ideas</fullName>
                </value>
                <value>
                    <fullName>InfoSec</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Service Department</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Tools</fullName>
                </value>
                <value>
                    <fullName>Usability &amp; App Development</fullName>
                </value>
                <value>
                    <fullName>User Experience</fullName>
                </value>
                <value>
                    <fullName>Verticals</fullName>
                </value>
                <value>
                    <fullName>www</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Owner_For_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Coverage_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether team needs to participate in release coverage</description>
        <label>Release Coverage Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Rollup_Reporting_Group__c</fullName>
        <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
        <label>Rollup Reporting Group TO BE DELETED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>AppStore</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>IT Business Applications</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Public Websites</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__SM_Certified__c</fullName>
        <description>Is ScrumMaster certified?</description>
        <formula>agf__Scrum_Master__r.agf__Certified_Scrum_Master__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is ScrumMaster certified?</inlineHelpText>
        <label>SM Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__SM_more_than_one_team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM more than one team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Master</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scrum_Master_For_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Meeting_Time_Location__c</fullName>
        <inlineHelpText>The time and location of the team&apos;s scrum meeting. Include dial-in #, if applicable.</inlineHelpText>
        <label>Scrum Meeting Time/Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Domain__c</fullName>
        <description>Describes what the team owns (functionality, infrastructure, services, etc.)</description>
        <inlineHelpText>Describes what the team owns (functionality, infrastructure, services, etc.)</inlineHelpText>
        <label>Scrum Team Domain</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scrumforce_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scrumforce ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Status_Change_Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Change Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Status_Report_Format__c</fullName>
        <defaultValue>IF ( $RecordType.Name = &quot;Program Team&quot;,&quot;decisions risks blockers milestones participants&quot;, &quot;decisions risks blockers&quot;)</defaultValue>
        <inlineHelpText>For Status reports for this team, allows you to specify the sections that should be displayed in that report and the order they should be displayed in. Use a space to separate each section. May include: decisions risks blockers milestones participants</inlineHelpText>
        <label>Status Report Sections</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Story_Point_Scale__c</fullName>
        <defaultValue>&quot;1,2,3,5,8,13,21&quot;</defaultValue>
        <inlineHelpText>Enter the story point scale your team uses. This field must be a number comma separated list. By default it will be Fibonacci sequence through 21.</inlineHelpText>
        <label>Story Point Scale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team_Email_Group_ID__c</fullName>
        <label>Team Email Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team_Home_Page__c</fullName>
        <description>A link to the team&apos;s home page.  For example their Google Site, Chatter Group or alternative resource where users can find more information about this team.</description>
        <inlineHelpText>Enter the URL for your team&apos;s main site (Google, GitHub, etc). If you don&apos;t have a site, enter the URL for your team&apos;s primary Chatter group.</inlineHelpText>
        <label>Team Homepage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Team_Queue_ID__c</fullName>
        <label>Team Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team_Queue__c</fullName>
        <formula>HYPERLINK(&quot;p/own/Queue/d?id=&quot; &amp; agf__Team_Queue_ID__c , Name &amp; &quot; Scrum Team&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team_Size__c</fullName>
        <label>Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Tenure_on_team__c</fullName>
        <label>One year tenure on team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Total_Dev_Allocation__c</fullName>
        <label>Total Dev Allocation</label>
        <summarizedField>agf__ADM_Scrum_Team_Member__c.agf__Allocation__c</summarizedField>
        <summaryFilterItems>
            <field>agf__ADM_Scrum_Team_Member__c.agf__Role__c</field>
            <operation>equals</operation>
            <value>Developer</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_Dev__c</fullName>
        <label>Total Dev</label>
        <summaryFilterItems>
            <field>agf__ADM_Scrum_Team_Member__c.agf__Role__c</field>
            <operation>equals</operation>
            <value>Developer</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_Dev_with_Allocation__c</fullName>
        <formula>agf__Total_Dev_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dev with Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_Member_Allocation__c</fullName>
        <label>Total Member Allocation</label>
        <summarizedField>agf__ADM_Scrum_Team_Member__c.agf__Allocation__c</summarizedField>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_Members__c</fullName>
        <label>Total Members</label>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_Members_with_Allocation__c</fullName>
        <formula>agf__Total_Member_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Members with Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Total_QE_Allocation__c</fullName>
        <label>Total QE Allocation</label>
        <summarizedField>agf__ADM_Scrum_Team_Member__c.agf__Allocation__c</summarizedField>
        <summaryFilterItems>
            <field>agf__ADM_Scrum_Team_Member__c.agf__Role__c</field>
            <operation>equals</operation>
            <value>QA Engineer</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_QE__c</fullName>
        <label>Total QE</label>
        <summaryFilterItems>
            <field>agf__ADM_Scrum_Team_Member__c.agf__Role__c</field>
            <operation>equals</operation>
            <value>QA Engineer</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Total_QE_with_Allocation__c</fullName>
        <formula>agf__Total_QE_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total QE with Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                    <default>true</default>
                    <label>Program</label>
                </value>
                <value>
                    <fullName>Program of Programs</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Workrgoup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Velocity_Type__c</fullName>
        <defaultValue>(&quot;Story Points&quot;)</defaultValue>
        <label>Velocity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Story Points</fullName>
                    <default>true</default>
                    <label>Story Points</label>
                </value>
                <value>
                    <fullName>Record Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Vision__c</fullName>
        <inlineHelpText>The reason why this program exists. Ultimately what is this program accomplishing.</inlineHelpText>
        <label>Vision</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <recordTypes>
        <fullName>agf__Program</fullName>
        <active>true</active>
        <description>Used to create Program teams or Programs/Workgroups</description>
        <label>Program Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Scrum_Team</fullName>
        <active>true</active>
        <description>Used to create teams of type scrum team</description>
        <label>Scrum Team</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Cloud_is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(agf__Cloud__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Please specify the department this team belongs to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__No_Ampersand_in_names</fullName>
        <active>false</active>
        <description>We want to make sure that teams don&apos;t use &amp; in names because it breaks certain reports where team name is used in the URL for the scontrol</description>
        <errorConditionFormula>CONTAINS(Name, &apos;&amp;&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Scrum Team name cannot contain &quot;&amp;&quot;, please use &quot;and&quot; instead</errorMessage>
    </validationRules>
</CustomObject>